[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/character/gravity_man_100.png" type="Texture" id=1]
[ext_resource path="res://assets/character/gravity_man_101.png" type="Texture" id=2]
[ext_resource path="res://assets/character/gravity_man_102.png" type="Texture" id=3]
[ext_resource path="res://assets/character/gravity_man_103.png" type="Texture" id=4]
[ext_resource path="res://assets/character/gravity_man_105.png" type="Texture" id=5]
[ext_resource path="res://assets/character/gravity_man_104.png" type="Texture" id=6]
[ext_resource path="res://actors/main_player.gd" type="Script" id=7]
[ext_resource path="res://actors/functionality/straight_light.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sound_effects/gravity_beam_run_mixdown_v2.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/sound_effects/electric_burn_mixdown.mp3" type="AudioStream" id=10]
[ext_resource path="res://assets/character/explodes/gravity_man_electrocuted7.png" type="Texture" id=11]
[ext_resource path="res://assets/character/explodes/gravity_man_electrocuted2.png" type="Texture" id=12]
[ext_resource path="res://assets/character/explodes/gravity_man_electrocuted6.png" type="Texture" id=13]
[ext_resource path="res://assets/character/explodes/gravity_man_electrocuted5.png" type="Texture" id=14]
[ext_resource path="res://assets/character/explodes/gravity_man_electrocuted1.png" type="Texture" id=15]
[ext_resource path="res://assets/character/explodes/gravity_man_electrocuted3.png" type="Texture" id=16]
[ext_resource path="res://assets/character/explodes/gravity_man_electrocuted4.png" type="Texture" id=17]
[ext_resource path="res://assets/sound_effects/jump_mixdown.mp3" type="AudioStream" id=18]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 16.0

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 11 ) ],
"loop": false,
"name": "electrocuted",
"speed": 10.0
} ]

[node name="main_player" type="KinematicBody2D" groups=["player"]]
collision_mask = 10
script = ExtResource( 7 )

[node name="interactive_area2D" type="Area2D" parent="."]
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="interactive_area2D"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="right_beam" parent="." instance=ExtResource( 8 )]
visible = false
modulate = Color( 0.972549, 0.682353, 0, 1 )
position = Vector2( 60, -62 )
rotation = -2.34811
scale = Vector2( 0.25, 0.25 )

[node name="Area2D" type="Area2D" parent="right_beam"]
collision_layer = 512
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="right_beam/Area2D"]
polygon = PoolVector2Array( -28.0846, -325.053, -98.0999, 111.105, -138.444, 368.827, 141.492, 358.078, 14.4547, -311.254 )
disabled = true

[node name="left_beam" parent="." instance=ExtResource( 8 )]
visible = false
modulate = Color( 0.972549, 0.682353, 0, 1 )
position = Vector2( -63, -58 )
rotation = 2.34747
scale = Vector2( 0.25, 0.25 )

[node name="Area2D" type="Area2D" parent="left_beam"]
collision_layer = 1024
collision_mask = 64

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="left_beam/Area2D"]
polygon = PoolVector2Array( -25.4701, -322.675, -141.771, 363.644, 141.16, 354.798, 8.46973, -322.379 )
disabled = true

[node name="up_beam" parent="." instance=ExtResource( 8 )]
visible = false
modulate = Color( 0.972549, 0.682353, 0, 1 )
position = Vector2( -3, -87 )
rotation = 3.14159
scale = Vector2( 0.25, 0.25 )

[node name="Area2D" type="Area2D" parent="up_beam"]
collision_layer = 256
collision_mask = 16

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="up_beam/Area2D"]
polygon = PoolVector2Array( -27.9991, -344, -140.001, 368, 139.999, 356, 4.00086, -340 )
disabled = true

[node name="physical_collisions" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="revive_timer" type="Timer" parent="."]
wait_time = 0.9
one_shot = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 2
frames = SubResource( 1 )
animation = "run"

[node name="beam_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="cooldown_timer" type="Timer" parent="beam_sound"]
wait_time = 0.001
one_shot = true

[node name="death_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="jump_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
volume_db = -14.0
pitch_scale = 0.7

[connection signal="area_entered" from="interactive_area2D" to="." method="_on_interactive_area2D_area_entered"]
[connection signal="area_entered" from="right_beam/Area2D" to="." method="_on_Area2D_right_beam_area_entered"]
[connection signal="area_shape_exited" from="right_beam/Area2D" to="." method="_on_Area2D_right_beam_area_shape_exited"]
[connection signal="area_entered" from="up_beam/Area2D" to="." method="_on_Area2D_up_beam_area_entered"]
[connection signal="area_shape_exited" from="up_beam/Area2D" to="." method="_on_Area2D_up_beam_area_shape_exited"]
[connection signal="timeout" from="revive_timer" to="." method="_on_revive_timer_timeout"]
[connection signal="timeout" from="beam_sound/cooldown_timer" to="." method="_on_cooldown_timer_timeout"]
